diesel_compile_tests/tests/fail/select_for_update_skip_locked_cannot_be_used_on_sqlite.stderr
error[E0277]: the trait bound `diesel::query_builder::locking_clause::ForUpdate: QueryFragment<Sqlite>` is not satisfied
  --> tests/fail/select_for_update_skip_locked_cannot_be_used_on_sqlite.rs:17:15
   |
17 |         .load(&mut conn)
   |          ---- ^^^^^^^^^ the trait `QueryFragment<Sqlite>` is not implemented for `diesel::query_builder::locking_clause::ForUpdate`
   |          |
   |          required by a bound introduced by this call
   |
   = help: the following other types implement trait `QueryFragment<DB, SP>`:
             <diesel::query_builder::locking_clause::ForUpdate as QueryFragment<Mysql>>
             <diesel::query_builder::locking_clause::ForUpdate as QueryFragment<Pg>>
   = note: required for `LockingClause<ForUpdate, SkipLocked>` to implement `QueryFragment<Sqlite>`
   = note: 2 redundant requirements hidden
   = note: required for `SelectStatement<FromClause<table>, DefaultSelectClause<FromClause<table>>, ..., ..., ..., ..., ..., ..., ...>` to implement `QueryFragment<Sqlite>`
   = note: required for `SelectStatement<FromClause<table>, DefaultSelectClause<FromClause<table>>, ..., ..., ..., ..., ..., ..., ...>` to implement `LoadQuery<'_, SqliteConnection, _>`
note: required by a bound in `diesel::RunQueryDsl::load`
  --> $DIESEL/src/query_dsl/mod.rs
   |
   |         Self: LoadQuery<'query, Conn, U>,
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::load`

error[E0277]: the trait bound `diesel::query_builder::locking_clause::SkipLocked: QueryFragment<Sqlite>` is not satisfied
  --> tests/fail/select_for_update_skip_locked_cannot_be_used_on_sqlite.rs:17:15
   |
17 |         .load(&mut conn)
   |          ---- ^^^^^^^^^ the trait `QueryFragment<Sqlite>` is not implemented for `diesel::query_builder::locking_clause::SkipLocked`
   |          |
   |          required by a bound introduced by this call
   |
   = help: the following other types implement trait `QueryFragment<DB, SP>`:
             <diesel::query_builder::locking_clause::SkipLocked as QueryFragment<Mysql>>
             <diesel::query_builder::locking_clause::SkipLocked as QueryFragment<Pg>>
   = note: required for `LockingClause<ForUpdate, SkipLocked>` to implement `QueryFragment<Sqlite>`
   = note: 2 redundant requirements hidden
   = note: required for `SelectStatement<FromClause<table>, DefaultSelectClause<FromClause<table>>, ..., ..., ..., ..., ..., ..., ...>` to implement `QueryFragment<Sqlite>`
   = note: required for `SelectStatement<FromClause<table>, DefaultSelectClause<FromClause<table>>, ..., ..., ..., ..., ..., ..., ...>` to implement `LoadQuery<'_, SqliteConnection, _>`
note: required by a bound in `diesel::RunQueryDsl::load`
  --> $DIESEL/src/query_dsl/mod.rs
   |
   |         Self: LoadQuery<'query, Conn, U>,
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::load`
